<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.0.6</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>win.pocketo</groupId>
	<artifactId>spring-boot-dockerizing</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>spring-boot-dockerizing</name>
	<description>Dockerizing a Spring Boot application</description>
	<properties>
		<java.version>17</java.version>
		<docker.image.name>tonghoangvu/spring-boot-dockerizing:cnb-jdk</docker.image.name>
		<bp.jvm.version>17</bp.jvm.version>
		<bp.jvm.type>JDK</bp.jvm.type>
		<bp.jvm.jlink.enabled>false</bp.jvm.jlink.enabled>
		<bp.jvm.jlink.args>--add-modules java.se,jdk.jdwp.agent --strip-debug --no-man-pages --no-header-files --compress=2</bp.jvm.jlink.args>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<!-- Fixed output JAR filename to avoid duplication when using COPY command in Dockerfile -->
		<finalName>app</finalName>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<layers>
						<enabled>true</enabled>
						<includeLayerTools>true</includeLayerTools>
					</layers>
					<image>
						<name>${docker.image.name}</name>
						<env>
							<BP_JVM_VERSION>${bp.jvm.version}</BP_JVM_VERSION>
							<BP_JVM_TYPE>${bp.jvm.type}</BP_JVM_TYPE>
							<BP_JVM_JLINK_ENABLED>${bp.jvm.jlink.enabled}</BP_JVM_JLINK_ENABLED>
							<BP_JVM_JLINK_ARGS>${bp.jvm.jlink.args}</BP_JVM_JLINK_ARGS>
						</env>
						<pullPolicy>IF_NOT_PRESENT</pullPolicy>
						<buildCache>
							<volume>
								<name>cache-${project.artifactId}.build</name>
							</volume>
						</buildCache>
						<launchCache>
							<volume>
								<name>cache-${project.artifactId}.launch</name>
							</volume>
						</launchCache>
					</image>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
